# Arnes_hacker

./: .env.example  .gitignore  AUDITORIA_FINAL.md  ESTADO_PROYECTO.md  QUICKSTART.md  README.md  docker-compose.yml  install.sh  main.py  mcp_config.yml  pyproject.toml  requirements.txt  start.sh  test_arnes.py
agents/: __init__.py  base.py  evasion.py  exploit.py  malware.py  osint.py  pivoting.py  post_exploit.py  recon.py  undercover.py
arnes_fsociety/: __init__.py  core.py
arnes_fsociety/backends/: __init__.py  docker_sandbox.py
arnes_fsociety/memory/: AGENTS.md  __init__.py  state_store.py
arnes_fsociety/subagents/: __init__.py  cyber_warfare.py  exploit.py  osint.py  post_exploit.py  recon.py
arnes_fsociety/tools/: __init__.py  mcp_bridge.py
better_harness/: config.toml
core/: host_executor.py  llm_factory.py  orchestrator.py  session_manager.py  tool_registry.py
evals/: test_basic.py
prompts/: evasion.txt  exploit.txt  malware.txt  orchestrator.txt  osint.txt  pivoting.txt  post_exploit.txt  recon.txt  undercover.txt
sandbox/: Dockerfile
server/: main.py
server/templates/: terminal.html
skills/metasploit-exploit/: SKILL.md
skills/nmap-recon/: SKILL.md
skills/sqlmap-exploit/: SKILL.md
